--- a/public/assets/css/app.bundle.css
+++ b/public/assets/css/app.bundle.css
@@ -4,10 +4,10 @@
 /* #BOOTSTRAP AND MIXINS - Base Unmodified Bootstrap file with theme mixins
 ========================================================================== */
 /*---------------------------------------------------
-    SASS ELements (based on LESS Elements 0.9 http://lesselements.com) 
+    SASS ELements (based on LESS Elements 0.9 http://lesselements.com)
   -------------------------------- -------------------
     LESS ELEMENTS made by Dmitry Fadeyev (http://fadeyev.net)
-    SASS port by Samuel Beek (http://samuelbeek.com) 
+    SASS port by Samuel Beek (http://samuelbeek.com)
   ---------------------------------------------------*/
 /*------------------------
     Usage
@@ -42,16 +42,16 @@ From this W3C document: http://www.webmasterworld.com/r.cgi?f=88&d=9769&url=http
 
 usage:
 @include text-contrast($bgcolor)
-      
-Color brightness is determined by the following formula: 
+
+Color brightness is determined by the following formula:
 ((Red value X 299) + (Green value X 587) + (Blue value X 114)) / 1000
 ------------------------*/
 /*------------------------
- color factory 
+ color factory
   eg: contrast-ink($contrastvalue)
 ------------------------*/
 /*------------------------
- color factory 
+ color factory
   eg: @include paint($blue-grey-50, bg-blue-grey-50);
 ------------------------*/
 /* backface visibility */
@@ -62,7 +62,7 @@ Color brightness is determined by the following formula:
 ========================================================================== */
 /* Looks good on chrome default color profile */
 /* We will manually convert these primary colors to rgb for the dark mode option of the theme */
-/* looks good in sRGB but washed up on chrome default 
+/* looks good in sRGB but washed up on chrome default
 $color-primary:						#826bb0;
 $color-success:						#31cb55;
 $color-info:						#5e93ec;
@@ -165,7 +165,7 @@ http://www.standardista.com/px-to-rem-conversion-if-root-font-size-is-16px/
 /*  Z-INDEX declearation
 ========================================================================== */
 /* we adjust bootstrap z-index to be higher than our higest z-index*/
-/*  CUSTOM ICON PREFIX 
+/*  CUSTOM ICON PREFIX
 ========================================================================== */
 /*  PRINT CSS (landscape or portrait)
 ========================================================================== */
@@ -203,11 +203,11 @@ aside.page-sidebar ($nav-width, $nav-background)
 		ul.nav-menu
 			li
 				a (parent level-0..., $nav-link-color, $nav-link-hover-color, $nav-link-hover-bg-color, $nav-link-hover-left-border-color)
-					icon 
+					icon
 					span
-					collapse-sign 
+					collapse-sign
 					
-				ul.nav-menu-sub-one  
+				ul.nav-menu-sub-one
 					li
 						a ($nav-level-1... $nav-sub-link-height)
 							span
@@ -246,13 +246,13 @@ aside.page-sidebar ($nav-width, $nav-background)
 /* List Table */
 /*   PAGE SETTINGS
 ========================================================================== */
-/*   PAGE BREADCRUMB 
+/*   PAGE BREADCRUMB
 ========================================================================== */
-/*   PAGE COMPONENT PANELS 
+/*   PAGE COMPONENT PANELS
 ========================================================================== */
-/*   PAGE COMPONENT PROGRESSBARS 
+/*   PAGE COMPONENT PROGRESSBARS
 ========================================================================== */
-/*   PAGE COMPONENT MESSENGER 
+/*   PAGE COMPONENT MESSENGER
 ========================================================================== */
 /*   FOOTER
 ========================================================================== */
@@ -327,8 +327,8 @@ h6 small,
   text-shadow: none; }
 
 /* looking for font size? Check _helpers.scss */
-/* PLACEHOLDER 
-============================================= 
+/* PLACEHOLDER
+=============================================
 
 EXAMPLE:
 
@@ -539,7 +539,7 @@ RESULT:
 			left: 0;
 			top: 0;
 			border-radius: 50%;
-		} 
+		}
 	}*/
 .saving #saving {
   margin: 5px;
@@ -808,7 +808,7 @@ html {
         position: absolute;
         border: 0px solid #ccc;
         right: 2rem;
-        top: 4.0625rem !important;
+        /*top: 4.0625rem !important;*/
         left: auto !important;
         padding: 0;
         margin: 0; }
@@ -959,7 +959,7 @@ html {
   display: block;
   opacity: 1;
   /*
-			 * n = number of buttons minus 1 
+			 * n = number of buttons minus 1
 			 *     eg. $header-btn-height * 2n
 			 */
   height: 7.75rem; }
@@ -1420,7 +1420,7 @@ html {
   .nav-menu:last-child {
     margin-bottom: 0; }
 
-/* nav hover elements 
+/* nav hover elements
 .nav-menu-hover {
 
 	li > ul {
@@ -2078,7 +2078,7 @@ html {
 		 * top navigation fixed for larger screens with nav on TOP
 		 */
     /*
-		 * center for left nav fixed with boxed layout 
+		 * center for left nav fixed with boxed layout
 		 */ }
     .nav-function-fixed:not(.nav-function-top).mod-main-boxed .page-sidebar {
       position: fixed !important; }
@@ -2323,7 +2323,7 @@ html {
 /* app navigation footer */
 .nav-footer {
   /*background-image: -webkit-linear-gradient(270deg, $nav-background-shade, transparent);
-	background-image: linear-gradient(270deg, $nav-background-shade, transparent); 
+	background-image: linear-gradient(270deg, $nav-background-shade, transparent);
 	background-color: $nav-background;*/
   height: 2.8125rem;
   bottom: 0;
@@ -2658,9 +2658,9 @@ html {
   color: #fff;
   background-color: #886ab5; }
 
-/* 	DEV NOTE: The reason why we had to add this layer for alert colors is because BS4 
-	does not allow you to add your own alert colors via variable control rather 
-	through a systemetic agent that changes the theme colors. 
+/* 	DEV NOTE: The reason why we had to add this layer for alert colors is because BS4
+	does not allow you to add your own alert colors via variable control rather
+	through a systemetic agent that changes the theme colors.
 
 	REF: https://github.com/twbs/bootstrap/issues/24341#issuecomment-337457218
 */
@@ -2746,14 +2746,14 @@ html {
   text-decoration: none !important; }
 
 .breadcrumb > li.breadcrumb-item {
-  max-width: 130px;
-  text-overflow: ellipsis;
+  /*max-width: 130px;*/
+  /*text-overflow: ellipsis;*/
   white-space: nowrap;
-  overflow: hidden;
+  /*overflow: hidden;*/
   display: block; }
-  .breadcrumb > li.breadcrumb-item:hover {
-    max-width: 200px !important;
-    cursor: default; }
+  /*.breadcrumb > li.breadcrumb-item:hover {*/
+  /*  max-width: 200px !important;*/
+  /*  cursor: default; }*/
 
 [data-breadcrumb-seperator] + [data-breadcrumb-seperator]:before {
   content: attr(data-breadcrumb-seperator); }
@@ -3159,7 +3159,7 @@ html {
   background: linear-gradient(to right, rgba(0, 0, 0, 0.25) 0%, rgba(0, 0, 0, 0) 45%); }
 
 .carousel-control-next:hover {
-  /*background: -moz-linear-gradient(right, rgba(0,0,0,0.25) 0%, rgba(0,0,0,0) 45%); 
+  /*background: -moz-linear-gradient(right, rgba(0,0,0,0.25) 0%, rgba(0,0,0,0) 45%);
 	background: -webkit-linear-gradient(right, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0) 45%);*/
   background: -webkit-gradient(linear, right top, left top, from(rgba(0, 0, 0, 0.25)), color-stop(45%, rgba(0, 0, 0, 0)));
   background: linear-gradient(to left, rgba(0, 0, 0, 0.25) 0%, rgba(0, 0, 0, 0) 45%); }
@@ -3798,7 +3798,7 @@ html {
     -webkit-box-shadow: 0 5px 16px 0 rgba(0, 0, 0, 0.05), 0 5px 20px 0 rgba(0, 0, 0, 0.09);
             box-shadow: 0 5px 16px 0 rgba(0, 0, 0, 0.05), 0 5px 20px 0 rgba(0, 0, 0, 0.09);
     /*.panel-toolbar {
-			-webkit-filter: grayscale(100%);  Safari 6.0 - 9.0 
+			-webkit-filter: grayscale(100%);  Safari 6.0 - 9.0
 			filter: grayscale(100%);
 		}*/ }
 
@@ -4127,7 +4127,7 @@ label.menu-open-button {
 .shortcut-menu {
   position: fixed;
   right: 1.5rem;
-  bottom: 4.3125rem;
+  bottom: 3rem;
   z-index: 931; }
 
 .menu-open {
@@ -4537,7 +4537,7 @@ th {
 a.text-blur {
   text-shadow: 0 0 5px rgba(136, 106, 181, 0.5); }
 
-/* positions usage: 
+/* positions usage:
    .position-absolute|relative|static|fixed .pos-top|left|right|bottom */
 .pos-top {
   top: 0; }
@@ -4895,7 +4895,7 @@ a.text-blur {
 .z-index-water {
   z-index: -99; }
 
-/* cursor 
+/* cursor
 	usage: cursor-default;
 */
 .cursor-auto {
@@ -5488,7 +5488,7 @@ code {
 
 /*
 
-	DOC: In Bootstrap there is a small snippet added by the team for IE10 in windows 8 the 
+	DOC: In Bootstrap there is a small snippet added by the team for IE10 in windows 8 the
 	following comments by the author states:
 
 		IE10 in Windows (Phone) 8
@@ -5510,7 +5510,7 @@ code {
 		width: device-width;
 		}
 
-	Solution: 
+	Solution:
 	http://msdn.microsoft.com/en-us/library/ie/hh771902(v=vs.85).aspx
 	We add the following instead:
 
@@ -5526,7 +5526,7 @@ body.desktop-detected {
     z-index: 0;
 }*/
 /*.btn {
-	box-shadow: 0 1px 10px rgba(0, 0, 0, 0.05), 
+	box-shadow: 0 1px 10px rgba(0, 0, 0, 0.05),
 				0 1px 2px rgba(0, 0, 0, 0.1);
 
 	&:hover,
@@ -5579,7 +5579,7 @@ a[target]:not(.btn) {
   text-decoration: underline !important; }
 
 /* btn active */
-/*.btn.active, 
+/*.btn.active,
 .btn:active {
     background-image: none;
     outline: 0;
@@ -5658,7 +5658,7 @@ body:not(.mobile-view-activated).mod-main-boxed.modal-open {
             box-shadow: none;
     background-color: #fffaee; }
   /*  Counters IE bug
-		DOC: If you've ever used CSS transitions on structural elements on your page, 
+		DOC: If you've ever used CSS transitions on structural elements on your page,
 		you may have noticed a case where a transition occur immideately after page load.
 		As a result the user may experience the illusion of "broken page elements"
 
@@ -5994,12 +5994,12 @@ $grid-breakpoints: (
 
 /* changes content colors based on ambience light source of the user (experimental) */
 /* DOCS : https://developer.mozilla.org/en-US/docs/Web/CSS/%40media/light-level */
-/* The device is used in a environment with a light level in the ideal range for the screen, 
+/* The device is used in a environment with a light level in the ideal range for the screen,
  * and which does not necessitate any particular adjustment.. */
-/* The device is used in a dim environment, where excessive contrast and brightness would be 
- * distracting or uncomfortable to the reader. For example: night time, or a dimly 
+/* The device is used in a dim environment, where excessive contrast and brightness would be
+ * distracting or uncomfortable to the reader. For example: night time, or a dimly
  * illuminated indoor environment. */
-/* The device is used in an exceptionally bright environment, causing the screen to be washed 
+/* The device is used in an exceptionally bright environment, causing the screen to be washed
  * out and difficult to read. For example: bright daylight. */
 /* #FORMS (customized bootstrap form elems)
 ========================================================================== */
@@ -6560,10 +6560,10 @@ body:not(.no-slimscroll) .custom-scroll {
 
 /*!
  * Waves v0.7.6
- * http://fian.my.id/Waves 
- * 
- * Copyright 2014-2018 Alfiana E. Sibuea and other contributors 
- * Released under the MIT license 
+ * http://fian.my.id/Waves
+ *
+ * Copyright 2014-2018 Alfiana E. Sibuea and other contributors
+ * Released under the MIT license
  * https://github.com/fians/Waves/blob/master/LICENSE */
 .waves-effect {
   position: relative;
@@ -7821,8 +7821,8 @@ body:not(.mobile-detected)::-webkit-scrollbar-thumb:vertical:hover,
 body:not(.mobile-detected).modal-open .modal::-webkit-scrollbar-thumb:vertical:hover {
   background-color: dimgray; }
 
-/* 
- * Left Panel custom scroll 
+/*
+ * Left Panel custom scroll
  */
 .page-sidebar .primary-nav::-webkit-scrollbar-track-piece {
   background-color: #efefef; }
